# SegundoParcialProgramacion

./: CMakeLists.txt  README.md  clientes.csv  main.cpp  productos.csv
Model/: Archivo.cpp  Archivo.h  Cliente.cpp  Cliente.h  Contenedor.h  Fachada.cpp  Fachada.h  GestorProducto.cpp  GestorProducto.h  GestorUsuario.cpp  GestorUsuario.h  Iterador.h  Nodo.h  Producto.cpp  Producto.h  Publisher.cpp  Publisher.h  Suscriptor.cpp  Suscriptor.h  Utilities.h
View/: Menu.cpp  Menu.h
